# faro-shuffle

./: .envrc  .gitignore  Cargo.toml  PRODUCT_DESIGN_PROPOSAL.md  QUICKSTART.md  README.md  WAITLIST.md  config.json  justfile
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: complexity_scoring.rs  error.rs  lib.rs  llm_integration.rs  project_context.rs  task_parser.rs
examples/: task1.md  task2.md
prompts/: README.md
prompts/analysis/: complexity_assessment_guide.md  complexity_scoring_guide.md  complexity_scoring_template.md  task_analysis_criteria.md  task_analysis_template.md  task_complexity_scoring.md
prompts/decomposition/: task_decomposition_guide.md  task_decomposition_strategy.md  task_decomposition_template.md
prompts/estimation/: dependency_analysis_template.md  effort_estimation_framework.md  estimation_reference.md  risk_assessment_template.md
prompts/phases/01-core/: task-analysis-engine-v1.md  task-analysis-engine.md
prompts/phases/02-cli/: command-line-interface-v1.md  command-line-interface.md
prompts/phases/03-output/: output-formatters-v1.md  output-formatters.md
prompts/phases/04-context/: project-context-parser.md
prompts/phases/05-mcp/: mcp-module-implementation.md
prompts/phases/06-advanced/: advanced-features.md
prompts/project/: PHASE_ASSESSMENT.md  PROGRESS.md  PROJECT_WORKFLOW.md  V1_PHASE_ASSESSMENT.md  V1_PROGRESS.md
prompts/templates/: task_input_template.md  task_report_template.md
prompts/workflows/: complexity_analysis_workflow.md  farro_shuffle_workflow.md
