[package]
name = "faro_shuffle_core"
version = "0.1.0"
edition = "2024"
description = "Core analysis engine for faro-shuffle"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
markdown = "0.3"
async-trait = "0.1"
